plang/testing/logs/false-incorrect/44/program44.p.p
cF QY PnL :- ((vRyV CrJuU (kZ (l9RDP TiQ (Gw9u)) HFp70 (cg e0yTP Y (XfcAI))) (p5Ts (ztK (Mq) (l (hR t) (KjRR) M1 izogt)) GqWXp (wIHG) NPqT) (dZR lGEL (U) (FU0pI))), c1X9w); ((cuEmm (Hs9e) VX)), (wu (wIvgf (l) E31) LB dqqy5, (o4cl (SsV)), cfyv UPz; pIWP1 SC HH9 z3lB3).
md8iq c4Dh (sbU).
xXN r (sKeJb (q8M7e S (rpE gSkH (rSv4) u) (WnicT) (jeft)) D64 (gNuf (qt1gV (rLtl) C9 (D8q7K)) (w4OP (eilC cqf2 HLqcf) (p (tFpv (xTa n5YG2 (Gr) f pHs)) i (n (WK) (gU3 z (nsE (yqzc1 (v)) (P) (TF) o))) UaZ) (v (e (Lc)) (l)) (F)) (gz emkq a (V7x))) (ztYIq QGHlL (Qg) p)).
rd (x5) RfjhP pA3mP (T35) :- ((oWJ q FEP1; mx (dA3 (z57Qo (gUy bH7 (u6CFQ apSR9 (mFG)) mH8)) Y3 Q tLni) GjB (AR), e flt, dt1D vF F5nRx M VpYHz; o (jvT5U (zfSr5 (zbH x (b6ac (j) (cdQAM (IMPcx) NJrh (yiI (GBw))) ZYfuR (WX6))) kt AvVxh) pTY (yYC)), yU Xl, m G7 (YpW) nWRF (HDe), q GnI ewM (wM2MW) ACdvT)).
yS (ziaX o5TF (W)) B :- s ORP (Usw4).
zaiL (bRsSW O Zz6e) i.
p PR Litbz (dl (dKPIM (mtgYo) (l0F (k maI UR Ytcx)))) (GSL) :- pgG (xLH (QT)) (nd Rg vn (q zIWVk) (MUh)) jJa; ena (lBTv nJvU (S) Cos) Dhjw9.

hz xf (u (sZ (tNxoj (CO) D kzuO8 (b9L (V7V5O) FCC)) (N) (BmcaB) (mTAoM (JkC) (yWTiK (jtqN (UH8)) (bTst (fMv) (nXf2 (Teql) (EV)) F1j qA) (S12h)) (HT8))) A).


j (aNg (YEgl) (ikP5 WL (n (WtE6) t (rGh (HpK4E) (I2Z) T27 Fn) (Th)) (s5SW) j) (Y) (b l)) :- (crE (vh K RT A5UKx (Agv)) n18A (wx2X a o3MY) (Pim); cXjG iCd, wPBD, p5, gr; wKMhU; r67 (n IEbCW (ju) u)); yLiP C6 M J ijqVS.
vmEB NuKrj mio1 qKlm.
m Tg0 :- ((uX JA, j wbYq; zsot ZmsE (SWD) (rL yRCKa), cw3 FeoIh; iJKDf SDXBD (lk dBL (dYtsN (XNuc) F) (KoOo)) (mtlbN (h AJJFg) kEcp EOw (PX39)) (D58), o2 (OOwmQ) irLR (obP (sj (H)) A (Tb) (fOfkO (u (b (C) (q) (K6lhs) (hL (a (m (yzCuA) (ln (hRZD EmK) b) (sVvqA)) (BvR8z)) (UDJN)))))), (qIX0n))).

? gjIe ng (A8V8H) (ujl4j (FtJ) m UHvAV) (WUSYB); j T Q5S31.
